--- a/petsitting-master/views/about.html
+++ b/petsitting-master/views/about.html
@@ -1,121 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Fur-Ever Friends - Dog Adoption Center</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
-      rel="stylesheet"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    <link rel="stylesheet" href="css/animate.css" />
-
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="css/magnific-popup.css" />
-
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
-    <link rel="stylesheet" href="css/jquery.timepicker.css" />
-
-    <link rel="stylesheet" href="css/flaticon.css" />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 d-flex align-items-center">
-            <p class="mb-0 phone pl-md-2">
-              <a href="#" class="mr-2"
-                ><span class="fa fa-phone mr-1"></span> +387 63 109 960</a
-              >
-              <a href="#"
-                ><span class="fa fa-paper-plane mr-1"></span>
-                info@fureverfriends.com</a
-              >
-            </p>
-          </div>
-          <div class="col-md-6 d-flex justify-content-md-end">
-            <div class="social-media">
-              <p class="mb-0 d-flex">
-                <a href="login.html" class="d-flex align-items-center justify-content-center" style="color: #030000;">Login</a>
-                <a
-                  href="https://www.facebook.com/login/"
-                  class="d-flex align-items-center justify-content-center"
-                  ><span class="fa fa-facebook"
-                    ><i class="sr-only">Facebook</i></span
-                  ></a
-                >
-
-                <a
-                  href="https:/www.instagram.com/login/"
-                  class="d-flex align-items-center justify-content-center"
-                  ><span class="fa fa-instagram"
-                    ><i class="sr-only">Instagram</i></span
-                  ></a
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <nav
-      class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
-      id="ftco-navbar"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html"
-          ><span class="flaticon-pawprint-1 mr-2"></span>Fur-Ever Friends</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#ftco-nav"
-          aria-controls="ftco-nav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="fa fa-bars"></span> Menu
-        </button>
-        <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item active">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="services.html" class="nav-link">Services</a>
-            </li>
-            <li class="nav-item">
-              <a href="pets.html" class="nav-link">Pets</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a href="account.html" class="nav-link">Account</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- END nav -->
     <section
       class="hero-wrap hero-wrap-2"
       style="background-image: url('images/dog_bg.jpeg.webp')"
@@ -127,7 +11,7 @@
           <div class="col-md-9 ftco-animate pb-5">
             <p class="breadcrumbs mb-2">
               <span class="mr-2"
-                ><a href="index.html"
+                ><a href="index1.html"
                   >Home <i class="ion-ios-arrow-forward"></i></a
               ></span>
               <span>About us <i class="ion-ios-arrow-forward"></i></span>
@@ -259,7 +143,7 @@
                 <div class="card-header p-0" id="headingOne">
                   <h2 class="mb-0">
                     <button
-                      href="#collapseOne"
+                      href="collapse"
                       class="d-flex py-3 px-4 align-items-center justify-content-between btn btn-link"
                       data-parent="#accordion"
                       data-toggle="collapse"
@@ -379,7 +263,7 @@
         </div>
       </div>
     </section>
-
+    <!---->
     <section
       class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img"
       style="background-image: url(images/dogdog.jpeg)"
@@ -389,7 +273,7 @@
         <div class="row d-md-flex justify-content-end">
           <div class="col-md-12 col-lg-6 half p-3 py-5 pl-lg-5 ftco-animate">
             <h2 class="mb-4">Free Consultation</h2>
-            <form action="#" class="appointment">
+            <form action="#" class="appointment" id="consultations">
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
@@ -398,12 +282,18 @@
                     </div>
                   </div>
                 </div>
+                <!-- Your Name field -->
                 <div class="col-md-6">
                   <div class="form-group">
                     <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Your Name"
+                    type="text"
+                    class="form-control"
+                    id="yourName"
+                    placeholder="Your Name"
+                    required
+                    pattern="[a-zA-Z\s]+"
+                    title="Please enter only letters and spaces"
+                    name="name"
                     />
                   </div>
                 </div>
@@ -420,6 +310,7 @@
                         type="text"
                         class="form-control appointment_date"
                         placeholder="Date"
+                        name="date"
                       />
                     </div>
                   </div>
@@ -434,29 +325,29 @@
                         type="text"
                         class="form-control appointment_time"
                         placeholder="Time"
+                        name="time"
                       />
                     </div>
                   </div>
                 </div>
+                <!-- Message field -->
                 <div class="col-md-12">
                   <div class="form-group">
                     <textarea
-                      name=""
-                      id=""
-                      cols="30"
-                      rows="7"
-                      class="form-control"
-                      placeholder="Message"
+                    id="yourMessage"
+                    cols="30"
+                    rows="7"
+                    class="form-control"
+                    placeholder="Message"
+                    required
+                    name="message"
                     ></textarea>
                   </div>
                 </div>
                 <div class="col-md-12">
                   <div class="form-group">
-                    <input
-                      type="submit"
-                      value="Send message"
-                      class="btn btn-primary py-3 px-4"
-                    />
+                    <!-- Submit button -->
+                    <button type="submit" onclick="validateForm()">Submit</button>
                   </div>
                 </div>
               </div>
@@ -465,79 +356,55 @@
         </div>
       </div>
     </section>
+    <script>
+document.addEventListener('DOMContentLoaded', function() {
+  // Target the form by its ID
+  const form = document.getElementById('consultations');
 
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4 mb-md-0">
-            <h2 class="footer-heading">Dog Adoption Center</h2>
-            <p>"At Fur-ever Friends, we believe in second chances, unconditional love, and the joy of finding your perfect companion. 
-              Because every dog deserves a forever home and every home deserves a fur-ever friend."</p>
-            <ul class="ftco-footer-social p-0">
-              <li class="ftco-animate"></li>
-              <li class="ftco-animate">
-                
-              </li>
-            </ul>
-          </div>
+  // Listen for form submission
+  form.addEventListener('submit', function(event) {
+    // Prevent the form from submitting the traditional way
+    event.preventDefault();
 
-          <div class="col-md-6 col-lg-4 pl-lg-5 mb-4 mb-md-0">
-            <h2 class="footer-heading">Quick Links</h2>
-            <ul class="list-unstyled">
-              <li><a href="index.html" class="py-2 d-block">Home</a></li>
-              <li><a href="about.html" class="py-2 d-block">About</a></li>
-              <li><a href="services.html" class="py-2 d-block">Services</a></li>
+    // Initialize an object to store form data
+    let formData = {};
 
-              <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-md-0">
-            <h2 class="footer-heading">Have a Questions?</h2>
-            <div class="block-23 mb-3">
-              <ul>
-                <li>
-                  <span class="icon fa fa-map"></span
-                  ><span class="text"
-                    >Vrbanja 1, 71000 Sarajevo, Bosnia and Herzegovina</span
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><span class="icon fa fa-phone"></span
-                    ><span class="text">+387 63 109 960</span></a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><span class="icon fa fa-paper-plane"></span
-                    ><span class="text">info@fureverfriends.com</span></a
-                  >
-                  <li>
-                  <a href="#"
-                    ><span class="icon fa fa-paper-plane"></span
-                    ><span class="text">Working Hours: 7:00 - 22:00</span></a
-                  >
-                </li>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-5">
-          <div class="col-md-12 text-center">
-            <p class="copyright">
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              
-              All rights reserved | Fur-Ever Friends
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
+    // Use FormData to capture the form data
+    new FormData(form).forEach((value, key) => {
+      formData[key] = value;
+    });
+
+    // Log the formData object to the console
+    console.log(formData);
+
+    // If you wish to see the data as a string
+    console.log(JSON.stringify(formData));
+
+    // Send the form data to the server
+    fetch('your-server-url-here', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify(formData),
+    })
+    .then(response => response.json())
+    .then(data => {
+      console.log('Success:', data);
+    })
+    .catch((error) => {
+      console.error('Error:', error);
+    });
+  });
+});  </script>
+<script>
+
+</script>
+
+    
 
     <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen">
+    <!-- <div id="ftco-loader" class="show fullscreen">
       <svg class="circular" width="48px" height="48px">
         <circle
           class="path-bg"
@@ -559,23 +426,27 @@
           stroke="#F96D00"
         />
       </svg>
-    </div>
+    </div> -->
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+      <script src="js/jquery.min.js"></script>
+      <script src="js/jquery-migrate-3.0.1.min.js"></script>
+      <script src="js/jquery.spapp.min.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/jquery.easing.1.3.js"></script>
+      <script src="js/jquery.waypoints.min.js"></script>
+      <script src="js/jquery.stellar.min.js"></script>
+      <script src="js/jquery.animateNumber.min.js"></script>
+      <script src="js/bootstrap-datepicker.js"></script>
+      <script src="js/jquery.timepicker.min.js"></script>
+      <script src="js/owl.carousel.min.js"></script>
+      <script src="js/jquery.magnific-popup.min.js"></script>
+      <script src="js/scrollax.min.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+      <script src="js/google-map.js"></script>
+      <script src="js/main.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/script.js"></script>
   </body>
 </html>
