--- a/petsitting-master/views/login.html
+++ b/petsitting-master/views/login.html
@@ -431,60 +431,5 @@
       </div>
     </div>
   </div>
-  <script>
-    function openCity(evt, cityName) {
-      var i, tabcontent, tablinks;
-      tabcontent = document.getElementsByClassName("tabcontent");
-      for (i = 0; i < tabcontent.length; i++) {
-        tabcontent[i].style.display = "none";
-      }
-      tablinks = document.getElementsByClassName("tablinks");
-      for (i = 0; i < tablinks.length; i++) {
-        tablinks[i].className = tablinks[i].className.replace(" active", "");
-      }
-      document.getElementById(cityName).style.display = "block";
-      evt.currentTarget.className += " active";
-    }
-
-    // Get the element with id="defaultOpen" and click on it
-    document.getElementById("defaultOpen").click();
-  </script>
-  <script>
-    // Add a submit event listener to the sign-up form
-    const signUpForm = document.getElementById("sign-up-form");
-    signUpForm.addEventListener("submit", (event) => {
-      event.preventDefault();
-
-      // Get the user input from the form fields
-      const fullName = document.getElementById("full_name").value;
-      const email = document.getElementById("your_email").value;
-      const password = document.getElementById("password").value;
-      const confirmPassword = document.getElementById("confirm_password").value;
-
-      // Check if the passwords match
-      if (password !== confirmPassword) {
-        alert("Passwords do not match, please try again.");
-        return;
-      }
-      // Display the user input in the console
-      console.log(`Full Name: ${fullName}`);
-      console.log(`E-Mail: ${email}`);
-      console.log(`Password: ${password}`);
-      console.log(`Confirm Password: ${confirmPassword}`);
-    });
-
-    // Add a submit event listener to the sign-in form
-    const signInForm = document.getElementById("sign-in-form");
-    signInForm.addEventListener("submit", (event) => {
-      event.preventDefault();
-
-      // Get the user input from the form fields
-      const fullName = document.getElementById("full_name_1").value;
-      const password = document.getElementById("password_1").value;
-
-      // Display the user input in the console
-      console.log(`Full Name: ${fullName}`);
-      console.log(`Password: ${password}`);
-    });
-  </script>
+  <script src="js/script.js"></script>
 </body>
