--- a/petsitting-master/views/services.html
+++ b/petsitting-master/views/services.html
@@ -52,8 +52,7 @@
               <div class="media-body p-4">
                 <h3 class="heading">Dog Daycare</h3>
                 <p>
-                  Spend a day with us at our Dog Adoption center and keep our
-                  fur friends company during the day. Kindness required!
+                  Spend a day with us at our Dog Adoption center and keep our fur friends company during the day. Kindness required!
                 </p>
                 
               </div>
@@ -69,9 +68,7 @@
               <div class="media-body p-4">
                 <h3 class="heading">Adoption</h3>
                 <p>
-                  You met the right fur friend and you are certain about
-                  expanding your family? Visit us and complete the adoption
-                  process!
+                  You met the right fur friend and you are certain about expanding your family? Visit us and complete the adoption process!
                 </p>
                 
               </div>
@@ -89,9 +86,7 @@
               <div class="media-body p-4">
                 <h3 class="heading">Foster Care Program</h3>
                 <p>
-                  Establishing foster care programs to provide temporary homes
-                  for dogs, especially those with special needs or recovering
-                  from illness.
+                  Establishing foster care programs to provide temporary homes for dogs, especially those with special needs or recovering from illness.
                 </p>
                 
               </div>
@@ -175,7 +170,6 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
   </body>
