--- a/petsitting-master/views/about.html
+++ b/petsitting-master/views/about.html
@@ -298,9 +298,6 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="form-group"></div>
-                </div>
-                <div class="col-md-6">
                   <div class="form-group">
                     <div class="input-wrap">
                       <div class="icon">
@@ -330,6 +327,21 @@
                     </div>
                   </div>
                 </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                      
+                      <select name="service-id" class="form-control">
+                        <option value="1">Meet a Dog</option>
+                        <option value="2">Dog Daycare</option>
+                        <option value="3">Adoption</option>
+                        <option value="4">Foster Care Program</option>
+                        <option value="5">Emergency and Rescue Services</option>
+                        <option value="6">Volunteer Programs</option>
+                      </select>
+                  
+                  </div>
+                </div>
+
                 <!-- Message field -->
                 <div class="col-md-12">
                   <div class="form-group">
