--- a/petsitting-master/views/home.html
+++ b/petsitting-master/views/home.html
@@ -147,79 +147,34 @@
 <section class="ftco-counter" id="section-counter">
   <div class="container">
     <div class="row">
-      <div
-        class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate"
-      >
+      <div class="col-md-6 col-lg-4 d-flex justify-content-center">
         <div class="block-18 text-center">
           <div class="text">
-            <strong class="number" data-number="85">0</strong>
+            <strong class="number">85</strong>
           </div>
           <div class="text">
             <span>Customers</span>
           </div>
         </div>
       </div>
-      <div
-        class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate"
-      >
+      <div class="col-md-6 col-lg-4 d-flex justify-content-center">
         <div class="block-18 text-center">
           <div class="text">
-            <strong class="number" data-number="15">0</strong>
+            <strong class="number">15</strong>
           </div>
           <div class="text">
             <span>Professionals</span>
           </div>
         </div>
       </div>
-      <div
-        class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate"
-      >
+      <div class="col-md-6 col-lg-4 d-flex justify-content-center">
         <div class="block-18 text-center">
           <div class="text">
-            <strong class="number" data-number="40">0</strong>
+            <strong class="number">40</strong>
           </div>
           <div class="text">
             <span>Pets Hosted</span>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="ftco-section bg-light ftco-faqs">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 order-md-last">
-        <div
-          class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0"
-          style="background-image: url(images/FAQ2.jpeg)"
-        >
-          <!-- Leave this div empty as it's for displaying images -->
-        </div>
-        <div class="d-flex mt-3">
-          <div
-            class="img img-2 mr-md-2"
-            style="background-image: url(images/FAQ1.webp)"
-          ></div>
-          <div
-            class="img img-2 ml-md-2"
-            style="background-image: url(images/FAQ3.jpeg)"
-          ></div>
-        </div>
-      </div>
-
-      <div class="col-lg-6">
-        <div class="heading-section mb-5 mt-5 mt-lg-0">
-          <h2 class="mb-3">Frequently Asked Questions</h2>
-        </div>
-        <!-- This is where the FAQ items will be inserted -->
-        <div
-          id="accordion"
-          class="myaccordion w-100"
-          aria-multiselectable="true"
-        >
-          <!-- Dynamic FAQ items will be inserted here -->
         </div>
       </div>
     </div>
@@ -239,7 +194,10 @@
     </div>
     <div class="row ftco-animate">
       <div class="col-md-12">
-        <div class="carousel-testimony owl-carousel ftco-owl">
+        <div
+          class="carousel-testimony owl-carousel ftco-owl"
+          id="feedbackContainer"
+        >
           <!-- Feedbacks will be dynamically inserted here -->
         </div>
       </div>
@@ -252,11 +210,12 @@
   <div class="container" style="padding-top: 3rem; padding-bottom: 3rem">
     <div class="row justify-content-center pb-5 mb-3">
       <div class="col-md-7 heading-section text-center ftco-animate">
-        <h2>Available Pets</h2>
+        <p>
+          <a href="#pets" class="btn btn-primary btn-outline-primary"
+            >View All Pets</a
+          >
+        </p>
       </div>
-    </div>
-    <div class="row" id="pets">
-      <!-- Pets will be dynamically inserted here -->
     </div>
   </div>
 </section>
