--- a/petsitting-master/css/style.css
+++ b/petsitting-master/css/style.css
@@ -12776,3 +12776,47 @@ textarea.form-control {
 .icons-in-services {
   height: 50px;
 }
+
+#card {
+  border-radius: 20px;
+  width: 70%;
+  height: 600px;
+}
+.update-btn {
+  background-color: #000000;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.update-btn:hover {
+  background-color: #d7e0e4;
+}
+
+.feedback-card {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+.feedback-card-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.feedback-card-header img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.feedback-card-body p {
+  margin: 0;
+}
