--- a/petsitting-master/views/account.html
+++ b/petsitting-master/views/account.html
@@ -1,145 +1,26 @@
-<title>User Settings</title>
-<style>
-  body {
-    font-family: "Arial", sans-serif;
-    background-color: #e8e7e7;
-    margin: 0;
-    padding: 0;
+<script>
+  if (!user) {
+    window.location.href = "views/login.html";
   }
-
-  h2 {
-    text-align: center;
-    color: #333333;
-  }
-
-  .user-profile {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .user-avatar img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-  }
-
-  .user-details {
-    text-align: left;
-    padding: 10px;
-    border: 1px solid #206168;
-    border-radius: 8px;
-    background-color: #72bdc6;
-  }
-
-  .user-details label {
-    display: block;
-    margin-bottom: 8px;
-    color: #333333;
-  }
-
-  .user-details input {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    margin-bottom: 10px;
-  }
-
-  .user-details textarea {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    resize: vertical;
-  }
-
-  button {
-    background-color: #1a1f20;
-    color: #ffffff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-align: center;
-  }
-
-  button:hover {
-    background-color: #0056b3;
-  }
-</style>
-<body>
-  <div class="container col-md-7 col-lg-7 mb-7 mb-md-0">
-    <h2>User Settings</h2>
-    <form
-      id="userForm"
-      onsubmit="event.preventDefault(); validateAccountForm();"
-    >
-      <div class="user-profile">
-        <div class="user-avatar">
-          <img
-            src="https://bootdey.com/img/Content/avatar/avatar7.png"
-            alt="User Photo"
-          />
-        </div>
+</script>
+<div
+  class="container d-flex justify-content-center align-items-center"
+  style="padding: 20px"
+>
+  <div id="card" style="padding: 20px">
+    <div class="user text-center">
+      <div class="mt-5 text-center">
+        <img src="images/emina.jpeg" class="rounded-circle" width="80" />
       </div>
+    </div>
 
-      <div class="user-details">
-        <label for="fullName">Full Name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="fullName"
-          required
-          pattern="[a-zA-Z\s]+"
-          placeholder="Full Name"
-          title="Please enter only letters and spaces"
-        />
+    <div class="mt-5 text-center">
+      <h4 class="mb-0">Iman Arifhodžić</h4>
+      <span class="text-muted d-block mb-2">Los Angeles</span>
+      <span class="text-muted d-block mb-2">imancica</span>
+      <span class="text-muted d-block mb-2">iman.a@stu.ibu.edu.ba</span>
 
-        <label for="surname">Password</label
-        ><input
-          type="text"
-          class="form-control"
-          id="surname"
-          placeholder="Password"
-          required
-          pattern="[a-zA-Z\s]+"
-          title="Please enter only letters and spaces"
-        />
-
-        <label for="email">Email</label
-        ><input
-          type="email"
-          class="form-control"
-          id="email"
-          placeholder="Email"
-          required
-        />
-
-        <label for="description">Short Description</label>
-        <textarea
-          id="shortDescription"
-          cols="30"
-          rows="7"
-          class="form-control"
-          placeholder="Short Description"
-          required
-        ></textarea>
-
-        <label for="location">Location</label>
-        <input
-          type="text"
-          class="form-control"
-          id="location"
-          placeholder="Location"
-          required
-        />
-      </div>
-
-      <button type="submit">Send</button>
-    </form>
+      <button class="update-btn">Update</button>
+    </div>
   </div>
-</body>
+</div>
