--- a/petsitting-master/views/services.html
+++ b/petsitting-master/views/services.html
@@ -23,139 +23,11 @@
 
     <section class="ftco-section bg-light">
       <div class="container">
-        <div class="row mb-5 pb-5">
-          <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-            <div class="d-block services text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-                <img class="icons-in-services" src="images/dog-icon.svg" style="height: 50px;" alt="">
-              </div>
-              <div class="media-body p-4">
-                <h3 class="heading">Meet a Dog</h3>
-                <p>
-                  Visit your possible new fur friend, get to know them and fall
-                  in love with the right one for you. Remember to bring lots of
-                  love and smiles with you!
-                </p>
-                
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-            <div class="d-block services text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-              <img class="icons-in-services" src="images/bone-icon.svg" style="height: 50px;" alt="">
-              </div>
-              <div class="media-body p-4">
-                <h3 class="heading">Dog Daycare</h3>
-                <p>
-                  Spend a day with us at our Dog Adoption center and keep our fur friends company during the day. Kindness required!
-                </p>
-                
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-            <div class="d-block services text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-              <img class="icons-in-services" src="images/paw-icon.svg" style="height: 50px;" alt="">
-              </div>
-              <div class="media-body p-4">
-                <h3 class="heading">Adoption</h3>
-                <p>
-                  You met the right fur friend and you are certain about expanding your family? Visit us and complete the adoption process!
-                </p>
-                
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-5 pt-4">
-          <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-            <div class="d-block services text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-              <img class="icons-in-services" src="images/dog-care-icon.svg" style="height: 50px;" alt="">
-              </div>
-              <div class="media-body p-4">
-                <h3 class="heading">Foster Care Program</h3>
-                <p>
-                  Establishing foster care programs to provide temporary homes for dogs, especially those with special needs or recovering from illness.
-                </p>
-                
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-            <div class="d-block services text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-              <img class="icons-in-services" src="images/dog-puppy-face-icon.svg" style="height: 50px;" alt="">
-              </div>
-              <div class="media-body p-4">
-                <h3 class="heading">Emergency and Rescue Services</h3>
-                <p>
-                  Responding to emergency situations, including rescuing stray
-                  or abandoned dogs or those affected by natural disasters.
-                </p>
-                
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-            <div class="d-block services text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-              <img class="icons-in-services" src="images/dog-bowl-icon.svg" style="height: 50px;" alt="">
-              </div>
-              <div class="media-body p-4">
-                <h3 class="heading">Volunteer Programs</h3>
-                <p>
-                  Recruiting volunteers to assist with various tasks, such as
-                  dog socialization, cleaning, and administrative duties.
-                </p>
-                
-              </div>
-            </div>
-          </div>
+        <div class="row mb-5 pb-5" id="services">
+          <!-- Services will be dynamically inserted here -->
         </div>
       </div>
     </section>
-
-    
-
-    <!-- loader -->
-    <!-- <div id="ftco-loader" class="show fullscreen">
-      <svg class="circular" width="48px" height="48px">
-        <circle
-          class="path-bg"
-          cx="24"
-          cy="24"
-          r="22"
-          fill="none"
-          stroke-width="4"
-          stroke="#eeeeee"
-        />
-        <circle
-          class="path"
-          cx="24"
-          cy="24"
-          r="22"
-          fill="none"
-          stroke-width="4"
-          stroke-miterlimit="10"
-          stroke="#F96D00"
-        />
-      </svg>
-    </div> -->
 
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
